# Noise-Monitor-MVP

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  audio_monitor.py  config.py  icons.py  main.py  models.py  overlay.py  settings_window.py  single_instance.py  tray.py
tests/: test_audio_monitor.py  test_config.py  test_models.py  test_settings_window.py
