[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noise-monitor-mvp"
version = "0.1.0"
description = "Windows MVP for microphone noise monitoring with a screen border overlay."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "PySide6",
    "sounddevice",
]

[project.scripts]
noise-monitor = "app.main:main"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["assets/*.ico"]
